# vectorspace

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
tests/: test_embedding.py  test_embedding_index.py  test_embedding_word_duplicates.py  test_embedding_words.py
vectorspace/: __init__.py  conceptnet.py  embedding.py  fasttext.py  lmdb.py  locks.py  logger.py  mapping.py  math.py  numba.py  plot.py  query.py  spacy.py  store.py  text.py  utils.py  word2vec.py  zoomable_scatter.json
