[metadata]
name = vectorspace
version = 1.0.13
description = A more opinionated way to do machine learning 🧅
url = https://github.com/exdatic/vectorspace
author = André Kischkel
author_email = andre@exdatic.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = true
package_dir=
    =.
packages=find:
include_package_data = true
python_requires = >=3.7
install_requires =
    anyascii
    cloudpickle
    elasticsearch>=7,<8
    lmdb
    loguru
    numba
    numpy>=1.20
    orjson
    scikit-learn
    spacy>=3.2.0,<4
    zstandard
tests_require =
    pytest
    pytest-asyncio

[options.package_data]
* = **/*.json

[options.extras_require]
test =
    flake8
    pytest

[tool:pytest]
testpaths = tests
norecursedirs = tests/test
filterwarnings =
    ignore::DeprecationWarning
    ignore::RuntimeWarning
    ignore::pytest.PytestUnraisableExceptionWarning

[flake8]
max-line-length = 127
